Fixed bug with underlines of tabs on mobile

--- a/projects.css
+++ b/projects.css
@@ -3,7 +3,6 @@
     font-family:        'Average Sans', sans-serif !important;
     color:             #2AB39A !important;
     text-decoration:      underline !important;
-    text-underline-offset: 200vh !important;
     background-color:   #27044a !important;
     border:             none;
   }
